--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -348,7 +348,7 @@ iconfont: //at.alicdn.com/t/c/font_1736178_k526ubmyhba.css
 navbar:
   # 导航栏左侧的标题，为空则按 hexo config 中 `title` 显示
   # The title on the left side of the navigation bar. If empty, it is based on `title` in hexo config
-  blog_title: "WP-BLOG"
+  blog_title: "WP"
 
   # 导航栏毛玻璃特效，实验性功能，可能会造成页面滚动掉帧和抖动，部分浏览器不支持会自动不生效
   # Navigation bar frosted glass special animation. It is an experimental feature
@@ -482,7 +482,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/kt.png
+  banner_img: /img/default.png
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -918,6 +918,7 @@ discuss:
 # Archive Page
 #---------------------------
 archive:
+  subtitle: "把时间折成目录"
   banner_img: /img/default.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
@@ -929,6 +930,7 @@ archive:
 #---------------------------
 category:
   enable: true
+  subtitle: "把思路分成脉络"
   banner_img: /img/default.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
@@ -958,6 +960,7 @@ category:
 #---------------------------
 tag:
   enable: true
+  subtitle: "把灵感贴成词条"
   banner_img: /img/default.png
   banner_img_height: 80
   banner_mask_alpha: 0.3
